@@ -34,5 +34,5 @@
 1:whence deals with symlink loops gracefully
 
  whence -s =sh(:P) | grep '.->' | wc -l
--fD:(workers/53524) whence -s doesn't print arrows for symlink-free paths
+0:(workers/53524) whence -s doesn't print arrows for symlink-free paths
 >0
