@@ -1261,6 +1261,7 @@ AC_CHECK_FUNCS(strftime strptime mktime timelocal \
 	       initgroups \
 	       setuid seteuid setreuid setresuid setsid \
 	       setgid setegid setregid setresgid \
+	       memccpy \
 	       memcpy memmove strstr strerror strtoul \
 	       getrlimit getrusage \
 	       setlocale \
